--- a/public/admin.html
+++ b/public/admin.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
     <style>
         .admin-container {
             padding-top: 76px;
@@ -242,6 +243,10 @@
                             <label class="form-label">Image URL</label>
                             <input type="url" class="form-control" id="product-image">
                         </div>
+                        <div class="mb-3">
+                            <label class="form-label">Sizes (comma separated, leave empty for no sizes)</label>
+                            <input type="text" class="form-control" id="product-sizes" placeholder="S, M, L, XL">
+                        </div>
                     </form>
                 </div>
                 <div class="modal-footer">
@@ -253,6 +258,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="components/admin.js"></script>
+    <script type="module" src="components/admin.js"></script>
 </body>
 </html>
