--- a/public/auth.html
+++ b/public/auth.html
@@ -40,6 +40,15 @@
         .form-control:focus + .password-toggle {
             color: var(--primary-color);
         }
+        .admin-badge {
+            background: linear-gradient(45deg, #ffd700, #ffed4e);
+            color: #000;
+            padding: 2px 8px;
+            border-radius: 12px;
+            font-size: 0.7rem;
+            font-weight: bold;
+            margin-left: 5px;
+        }
     </style>
 </head>
 <body>
@@ -88,6 +97,13 @@
                         <div class="text-center mb-4">
                             <h2 class="fw-bold">Welcome to IR7</h2>
                             <p class="text-muted">Sign in to your account</p>
+                            <div class="alert alert-info mt-3">
+                                <small>
+                                    <strong>Demo Admin Account:</strong><br>
+                                    Email: admin@ir7.com | Password: admin123
+                                    <span class="admin-badge">ADMIN</span>
+                                </small>
+                            </div>
                         </div>
 
                         <ul class="nav nav-pills auth-tabs nav-justified mb-4" id="authTabs">
@@ -251,8 +267,8 @@
                     email: 'admin@ir7.com',
                     password: 'admin123',
                     phone: '+8801000000000',
-                    createdAt: new Date().toISOString(),
-                    isAdmin: true
+                    isAdmin: true,
+                    createdAt: new Date().toISOString()
                 };
                 users.push(adminUser);
                 localStorage.setItem('users', JSON.stringify(users));
@@ -309,7 +325,11 @@
 
             try {
                 const user = AuthSystem.signIn(email, password);
-                showToast(`Welcome back, ${user.firstName}!`, 'success');
+                const message = user.isAdmin 
+                    ? `Welcome back, Admin ${user.firstName}! 🎉` 
+                    : `Welcome back, ${user.firstName}!`;
+                
+                showToast(message, 'success');
                 setTimeout(() => {
                     window.location.href = 'index.html';
                 }, 1500);
@@ -353,7 +373,11 @@
 
             try {
                 const user = AuthSystem.signUp(formData);
-                showToast(`Account created successfully! Welcome, ${user.firstName}!`, 'success');
+                const message = user.isAdmin 
+                    ? `Admin account created! Welcome, ${user.firstName}! 👑` 
+                    : `Account created successfully! Welcome, ${user.firstName}!`;
+                
+                showToast(message, 'success');
                 setTimeout(() => {
                     window.location.href = 'index.html';
                 }, 1500);
