--- a/public/admin.html
+++ b/public/admin.html
@@ -54,7 +54,6 @@
     </style>
 </head>
 <body>
-    <!-- Header -->
     <header class="site-header position-fixed w-100 top-0">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
@@ -95,15 +94,24 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="#categories" data-tab="categories">
+                        <i class="fas fa-tags me-2"></i>Categories
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#users" data-tab="users">
                         <i class="fas fa-users me-2"></i>Users
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#analytics" data-tab="analytics">
+                        <i class="fas fa-chart-line me-2"></i>Analytics
                     </a>
                 </li>
             </ul>
         </div>
 
         <div class="main-content">
-            <!-- Dashboard Tab -->
             <div id="dashboard-tab" class="tab-content">
                 <h2 class="mb-4">Dashboard Overview</h2>
                 <div class="row">
@@ -131,10 +139,27 @@
                             <h2 id="total-users">0</h2>
                         </div>
                     </div>
+                    <div class="col-md-3">
+                        <div class="stat-card bg-success text-white">
+                            <h5>Total Revenue</h5>
+                            <h2 id="total-revenue">৳0</h2>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="stat-card bg-warning text-dark">
+                            <h5>Low Stock</h5>
+                            <h2 id="low-stock">0</h2>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="stat-card bg-danger text-white">
+                            <h5>Out of Stock</h5>
+                            <h2 id="out-of-stock">0</h2>
+                        </div>
+                    </div>
                 </div>
             </div>
 
-            <!-- Orders Tab -->
             <div id="orders-tab" class="tab-content" style="display: none;">
                 <h2 class="mb-4">Order Management</h2>
                 <div class="table-responsive">
@@ -150,13 +175,11 @@
                             </tr>
                         </thead>
                         <tbody id="orders-table-body">
-                            <!-- Orders will be loaded here -->
-                        </tbody>
+                            </tbody>
                     </table>
                 </div>
             </div>
 
-            <!-- Products Tab -->
             <div id="products-tab" class="tab-content" style="display: none;">
                 <div class="d-flex justify-content-between align-items-center mb-4">
                     <h2>Product Management</h2>
@@ -172,17 +195,46 @@
                                 <th>Name</th>
                                 <th>Category</th>
                                 <th>Price</th>
+                                <th>Stock</th>
+                                <th>Rating/Reviews</th>
                                 <th>Actions</th>
                             </tr>
                         </thead>
                         <tbody id="products-table-body">
-                            <!-- Products will be loaded here -->
-                        </tbody>
+                            </tbody>
                     </table>
                 </div>
             </div>
 
-            <!-- Users Tab -->
+            <div id="categories-tab" class="tab-content" style="display: none;">
+                <div class="d-flex justify-content-between align-items-center mb-4">
+                    <h2>Category Management</h2>
+                    <button class="btn btn-primary" id="add-category-btn">
+                        <i class="fas fa-plus me-2"></i>Add New Category
+                    </button>
+                </div>
+                
+                <div class="card">
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>ID</th>
+                                        <th>Name</th>
+                                        <th>Display Name</th>
+                                        <th>Status</th>
+                                        <th>Actions</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="categories-table-body">
+                                    </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div id="users-tab" class="tab-content" style="display: none;">
                 <h2 class="mb-4">User Management</h2>
                 <div class="table-responsive">
@@ -193,19 +245,49 @@
                                 <th>Name</th>
                                 <th>Email</th>
                                 <th>Phone</th>
+                                <th>Orders</th>
                                 <th>Joined</th>
+                                <th>Actions</th>
                             </tr>
                         </thead>
                         <tbody id="users-table-body">
-                            <!-- Users will be loaded here -->
-                        </tbody>
+                            </tbody>
                     </table>
+                </div>
+            </div>
+
+            <div id="analytics-tab" class="tab-content" style="display: none;">
+                <h2 class="mb-4">Sales & Product Analytics</h2>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="stat-card">
+                            <h4>Monthly Revenue (Simplified)</h4>
+                            <div id="monthly-revenue">
+                                <p class="text-muted">Loading chart data...</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="stat-card">
+                            <h4>Top 5 Selling Products</h4>
+                            <div id="top-products">
+                                <p class="text-muted">Loading product data...</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="stat-card">
+                            <h4>Category Sales (Simplified)</h4>
+                            <div id="category-sales">
+                                <p class="text-muted">Category sales data would appear here.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Add Product Modal -->
     <div class="modal fade" id="productModal">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
@@ -224,10 +306,7 @@
                             <div class="col-md-6 mb-3">
                                 <label class="form-label">Category</label>
                                 <select class="form-control" id="product-category" required>
-                                    <option value="jerseys">Jerseys</option>
-                                    <option value="boots">Boots</option>
-                                    <option value="balls">Balls</option>
-                                    <option value="accessories">Accessories</option>
+                                    <option value="">Loading categories...</option>
                                 </select>
                             </div>
                         </div>
@@ -235,9 +314,19 @@
                             <label class="form-label">Description</label>
                             <textarea class="form-control" id="product-description" required></textarea>
                         </div>
-                        <div class="mb-3">
-                            <label class="form-label">Price (BDT)</label>
-                            <input type="number" class="form-control" id="product-price" required>
+                        <div class="row">
+                            <div class="col-md-4 mb-3">
+                                <label class="form-label">Price (BDT)</label>
+                                <input type="number" class="form-control" id="product-price" required>
+                            </div>
+                            <div class="col-md-4 mb-3">
+                                <label class="form-label">Stock Quantity</label>
+                                <input type="number" class="form-control" id="product-stock" value="10" required>
+                            </div>
+                            <div class="col-md-4 mb-3">
+                                <label class="form-label">Rating</label>
+                                <input type="number" class="form-control" id="product-rating" step="0.1" min="0" max="5" value="4.0" required>
+                            </div>
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Image URL</label>
@@ -246,6 +335,10 @@
                         <div class="mb-3">
                             <label class="form-label">Sizes (comma separated, leave empty for no sizes)</label>
                             <input type="text" class="form-control" id="product-sizes" placeholder="S, M, L, XL">
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Total Reviews</label>
+                            <input type="number" class="form-control" id="product-reviews" value="0" required>
                         </div>
                     </form>
                 </div>
@@ -256,6 +349,69 @@
             </div>
         </div>
     </div>
+
+    <div class="modal fade" id="categoryModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Add/Edit Category</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="category-form">
+                        <input type="hidden" id="category-id">
+                        <div class="mb-3">
+                            <label for="category-name" class="form-label">Category Name *</label>
+                            <input type="text" class="form-control" id="category-name" required 
+                                   placeholder="e.g., jerseys, boots, balls">
+                            <div class="form-text">Internal name (lowercase, no spaces)</div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="category-display-name" class="form-label">Display Name *</label>
+                            <input type="text" class="form-control" id="category-display-name" required 
+                                   placeholder="e.g., Jerseys, Football Boots">
+                            <div class="form-text">Name shown to customers</div>
+                        </div>
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="category-active" checked>
+                            <label class="form-check-label" for="category-active">Active</label>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" id="save-category">Save Category</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="stockModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Manage Stock for <span id="stock-product-name" class="text-primary"></span></h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="stock-form">
+                        <input type="hidden" id="stock-product-id">
+                        <p>Current Stock: <strong id="current-stock">0</strong></p>
+                        <div class="mb-3">
+                            <label for="new-stock" class="form-label">New Stock Quantity</label>
+                            <input type="number" class="form-control" id="new-stock" required min="0">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" onclick="updateStock()">Update Stock</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div id="admin-toast-container" class="toast-container position-fixed top-0 end-0 p-3"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="components/admin.js"></script>
